# dall-e-university-project

./: README.md
dalle-core/: pyproject.toml
dalle-core/app/: main.py
dalle-gui/: download-btn  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dalle-gui/public/: suggestions.json
dalle-gui/src/: App.tsx  main.tsx  routeTree.gen.ts
dalle-gui/src/canvas/: util.ts
dalle-gui/src/components/ui/third-party-time-picker/: period-select.tsx  time-picker-utils.tsx  time-picker.tsx
dalle-gui/src/losing_my_mind/: template_placement.tsx
dalle-gui/src/losing_my_mind/template_seminar/: guest_sheet.tsx  index.tsx
dalle-gui/src/routes/: __root.tsx  editor.lazy.tsx  generate.lazy.tsx  index.lazy.tsx
dalle-gui/src/ui/: CONSTANTS.ts  Canvas.tsx  promisify.ts
