[tool.poetry]
name = "dalle-core"
version = "0.1.0"
description = ""
authors = ["Dhruvin Purohit <hellodhruvin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openai = "^1.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
